--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -1,31 +1,42 @@
 name: Codex CI / backend-tests
-
 on: [push, pull_request]
-
 jobs:
   test:
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
+        with: { python-version: '3.12' }
+      - name: Cache pip
+        uses: actions/cache@v4
         with:
-          python-version: '3.12'
-      - name: Install dependencies
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('backend/requirements.txt') }}
+      - name: Install
         run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
-      - name: Run pytest with coverage
-        run: pytest backend
+          python -m pip install -U pip
+          pip install -r requirements.txt
+          pip freeze
+      - name: Lint (ruff minimal)
+        run: |
+          python - <<'PY'
+          print('skip ruff for step-01 (optional)')
+          PY
+      - name: Tests + coverage
+        env:
+          PYTHONDONTWRITEBYTECODE: '1'
+        run: |
+          pytest -q --maxfail=1 --disable-warnings --cov=src/app --cov-report=xml
+          test -f coverage.xml && echo "coverage.xml generated" || (echo "coverage.xml missing" && exit 1)
       - name: Coverage gate >= 70%
         run: |
           python - <<'PY'
-          import xml.etree.ElementTree as ET
-
-          tree = ET.parse('coverage.xml')
-          root = tree.getroot()
-          coverage = float(root.get('line-rate', '0')) * 100
-          print(f'Backend coverage: {coverage:.2f}%')
-          if coverage < 70.0:
-              raise SystemExit(1)
+          import xml.etree.ElementTree as ET, sys
+          r = ET.parse('coverage.xml').getroot()
+          rate = float(r.get('line-rate')) * 100
+          print(f"Coverage: {rate:.2f}%")
+          sys.exit(0 if rate >= 70.0 else 1)
           PY
